# daily-ai-gulf-of-mexico

./: .env.example  .gitignore  AGENTS.md  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: daily-ai-update.yml  deploy.yml  integration-test.yml
app/: layout.tsx  page.tsx
components/: activity-calendar.tsx  model-answer-block.tsx  question-section.tsx
lib/: data.ts  date-utils.ts
public/data/: anthropic.csv  google.csv  openai.csv  xai.csv
python/: README.md  evaluator.py  generate_llm_responses.py  test_evaluator.py  test_integration.py  test_model.py  update_csv.py  utils.py
python/models/: __init__.py  anthropic_model.py  google_model.py  openai_model.py  xai_model.py
