[project]
name = "daily-ai-gulf-of-mexico"
version = "0.1.0"
description = "Monitoring LLM Geopolitical Bias - Daily tracking of LLM responses about the Gulf of Mexico"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.1",
    "langchain-google-genai>=0.0.5",
    "langchain-xai>=0.2.1",
    "python-dotenv>=1.0.0",
]

